--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: ZebadiJah Maxwell 
 email: zebadijahmaxwell@gmail.com
 description: The Create Caribbean Research Institute Intern page for ZebadiJah Maxwell # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/zcamjekyll" # the subpath of your site, e.g. /blog
+url: "http://zmcreate18.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb 
 github_username: jekyll
 header_pages: 
